File exist check

--- a/Dokumentace.tex
+++ b/Dokumentace.tex
@@ -72,6 +72,8 @@ Cluster samotný má velikost 256B. Obsah který je v něm uložený musí být 
 Pokud je program spuštěn bez parametrů, zobrazí nápovědu. Argumenty na které program reaguje, jsou definovány v zadání. Navíc program reaguje na 3 argumenty vlastní. Pokud je spuštěn s argumentem $-dump$, vypíše na obrazovku seznam všech clusterů, které nejsou prázdné. Tento příkaz slouží pouze pro rychlou kontrolu. Další vlastní příkaz je $-corrupt$. Ten slouží k umělému vytvoření badbloků. Projde všechny clustery a pokud je cluster součástí souboru, nahradí prostřední znaky clusteru označením badbloku (FFFFFF). Posledním příkazem je $-repair$ $threadCount$. Tento příkaz projde FAT a opraví veškeré badbloky. Za parametr threadCount, je dosazen počet vláken, které mají tuto operaci provádět. Při spuštění programu dojde k načtení souboru FAT, pokud na dané cestě žádný není, je vytvořen prázdný. Poté se provede příkaz zadaný argumenty a změněná data se znovu do souboru uloží.
 \subparagraph{Paralelní zpracování}
 Pro paralelní zpracování jsem použil linux knihovnu pthreads. Před spuštěním opravy se vytvoří pole mutexů, každý odpovídá jednomu clusteru. Vlákna začínají na prvním clusteru. První vlákno zkontroluje jestli není cluster uzamčený, pokud není, zjistí jestli je špatný. Pokud ano, tak uzamkne příslušný mutex, najde prázdný cluster, uzamkne i jeho mutex a začne kopírovat. Každé vlákno vlastní zámek nad maximálně 2 mutexy. Po ukončení práce odemkne mutexy a přejde k dalšímu clusteru.
+\section{Překlad}
+Program byl přeložen a testován na unixovém operačním systému Debian verze Jessie. Překlad lze provést pomocí přiloženého cmake a nebo tímto příkazem. $gcc -o program main.c -lpthreads -lm $ Pro překlad jsou zapotřebí knihovny pthreads.h a math.h. 
 \section{Závěr}
 Uvědomuji si, že můj přístup není úplně ideální. Chtěl jsem ho po prvních testech zoptimalizovat. Poté co jsem svou aplikaci otestoval, jsem si však uvědomil že je velikost dat na testování moc malá. K opravě dochází v řádech milisekund a rozdíly mezi vícevláknovým a lineárním přístupem jsou neměřitelné. Nicméně si myslím, že smysl práce byl naplněn. Na vlastní kůži jsem si vyzkoušel jak funguje tento jednoduchý souborový systém a oprášil své znalosti programovacího jazyka C. 
 \end{document}
